tdf#163154 revert "tdf120224 writerfilter: consume excess bookmark

... from fields"

The intention of my 6.2 commit 579c0749bef8c980507229439715e72060c1b077
hack was to avoid importing duplicate LO-exported bookmarks.
(LO exported the bookmarks inside the field definition,
while MS normally has the bookmarks outside the field.)

So the impact of this revert should be neglible,
affecting mainly documents that LO round-tripped before 6.2
which would just import one more "Copy" of a bookmark.

The reason for doing the revert is also not terribly important.
For a few odd documents that otherwise wouldn't import a bookmark
around a field, it will allow the LO navigator a way to quickly
jump to the field (since Legacy Fields are not included
in the Navigator's field list).

Note that what I am reverting was a HACK any way.
It did a pretty good job of only ignoring LO-exported bookmarks,
since MS Word usually puts the bookmark around the OUTSIDE
of the field, while LO always puts the bookmark
inside the field definition (and thus IsOpenField())

make CppunitTest_sw_ww8export3 \
    CPPUNIT_TEST_NAME=testTdf79435_legacyInputFields

make CppunitTest_sw_ooxmlexport12 \
    CPPUNIT_TEST_NAME=testTdf120224_textControlCrossRef

Change-Id: Iefaf1173794c66b2a6f3e5c2143ed594de7efe35
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174081
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 7f84c993d3d2b5f05b18e740fea960901da57f80)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174020
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174309