writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -8885,19 +8885,6 @@ void DomainMapper_Impl::SetBookmarkName( const OUString& rBookmarkName )
     BookmarkMap_t::iterator aBookmarkIter = m_aBookmarkMap.find( m_sCurrentBkmkId );
     if( aBookmarkIter != m_aBookmarkMap.end() )
     {
-        // fields are internal bookmarks: consume redundant "normal" bookmark
-        if ( IsOpenField() )
-        {
-            FFDataHandler::Pointer_t  pFFDataHandler(GetTopFieldContext()->getFFDataHandler());
-            if (pFFDataHandler && pFFDataHandler->getName() == rBookmarkName)
-            {
-                // HACK: At the END marker, StartOrEndBookmark will START
-                // a bookmark which will eventually be abandoned, not created.
-                m_aBookmarkMap.erase(aBookmarkIter);
-                return;
-            }
-        }
-
         if ((m_sCurrentBkmkPrefix == "__RefMoveFrom__"
              || m_sCurrentBkmkPrefix == "__RefMoveTo__")
             && std::find(m_aRedlineMoveIDs.begin(), m_aRedlineMoveIDs.end(), rBookmarkName)
